<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.AddNoteFragment">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:hint="Title"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    <EditText
        android:id="@+id/et_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/et_title"
        android:fontFamily="@font/raleway"
        android:gravity="top"
        android:hint="Note"
        android:inputType="textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_check" />

</RelativeLayout>
